<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <Button
            android:layout_width="400px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_1"
            android:onClick="ActivityOne" />
        <Button
            android:layout_width="400px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_2"
            android:onClick="ActivityTwo" />
        <Button
            android:layout_width="400px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_3"
            android:onClick="ActivityThree" />
        <Button
            android:layout_width="400px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_4"
            android:onClick="ActivityFour" />
    </LinearLayout>
</LinearLayout>