<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText android:id="@+id/phoneNr"
            android:layout_weight="1"
            android:layout_width="400px"
            android:layout_height="wrap_content"
            android:hint="@string/number_call" />
        <EditText android:id="@+id/textMess"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/textn" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textn_send"
            android:onClick="sendMessage" />
    </LinearLayout>
</LinearLayout>